# pi-frame

./: Cargo.toml  README.md
boot/firmware/: cmdline.txt  config.txt
etc/initramfs-tools/: modules
etc/initramfs-tools/scripts/init-bottom/: fb-image-2
etc/initramfs-tools/scripts/init-premount/: fb-image-1
etc/sysctl.d/: udp-wmem.conf
src/: main.rs
srv/pi-frame/: config.toml  pi-frame  pi-frame.service  pi-frame.sh  unbind-vtcon1.service  unbind-vtcon1.sh
tools/: capture_image.sh  screenshot.sh
