[package]
name = "pi-frame"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = { version = "0.23.6", default-features = false }
gstreamer-video = { version = "0.23.6", default-features = false }
glib = { version = "0.20.10", default-features = false }
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
framebuffer = { version = "0.3.1", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
gst-plugin-fallbackswitch = { version = "0.13.0", default-features = false }
